Fixed line breaks in .md files by replacing custom md rendering solution with 3rd party dependency

--- a/guideline-app/app/ui/components/header/styles.less
+++ b/guideline-app/app/ui/components/header/styles.less
@@ -11,7 +11,7 @@
   }
 
   &__content {
-    margin-left: 170px;
+    margin-left: 216px;
 
     &__line {
       border: 1px solid #3e3832;
